--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,20 @@
 <resources>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="button_radius">10dp</dimen>
+    <dimen name="dialog_margin_bottom">8dp</dimen>
+    <dimen name="dialog_padding">10dp</dimen>
+    <dimen name="dialog_width">300dp</dimen>
+    <dimen name="floatingactionbutton_margin">16dp</dimen>
+    <dimen name="recyclerview_margin">25dp</dimen>
+    <dimen name="textview_debt_paddingbottom">15dp</dimen>
+    <dimen name="textview_debt_paddingtop">15dp</dimen>
+    <dimen name="textview_debt_textsize">27sp</dimen>
+    <dimen name="textview_name_paddingbottom">15dp</dimen>
+    <dimen name="textview_name_paddingtop">15dp</dimen>
+    <dimen name="textview_name_textsize">27sp</dimen>
+
 </resources>
